fixingScrollBar

--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,11 @@
   padding: 0;
   text-align: center
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
